--- a/googleCalendar/Views/Shared/_Layout.cshtml
+++ b/googleCalendar/Views/Shared/_Layout.cshtml
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
 
-    
-    <!--<link rel="stylesheet/less" type="text/css" href="@Url.Content("~/Content/Site.less")" />
-    <script src="@Url.Content("~/Scripts/less-1.7.0.min.js")" type="text/javascript"></script>-->
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet/less" type="text/css" href="@Url.Content("~/Content/Site.less")" />
+    <script src="@Url.Content("~/Scripts/less-1.7.0.min.js")" type="text/javascript"></script>
     
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/Site.css")" />
+    
+    <!--<link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/Site.css")" />-->
 
 </head>
 <body>
